<resources>
    <string name="app_name">enviroCar</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_send_log">Report Issue</string>
    <string name="menu_garage">My Garage</string>
    <string name="activity_checklist_title">Checklist</string>
    <string name="checklist_item_bluetooth_enabled">Bluetooth enabled</string>
    <string name="checklist_item_bluetooth_disabled">Bluetooth not enabled</string>
    <string name="checklist_item_obd_paired">OBD adapter paired</string>
    <string name="checklist_item_obd_not_paired">OBD adapter not paired</string>
    <string name="checklist_item_obd_connected">OBD adapter connected</string>
    <string name="checklist_item_obd_not_connected">OBD adapter not connected</string>
    <string name="checklist_item_obd_service_enabled">OBD service enabled</string>
    <string name="checklist_item_obd_service_disabled">OBD service not enabled</string>
    <string name="checklist_item_gps_enabled">GPS enabled</string>
    <string name="checklist_item_gps_disabled">GPS not enabled</string>
    <string name="checklist_item_not_signed_in">Not signed in</string>
    <string name="checklist_item_signed_in">Signed in</string>
    <string name="textView">TextView</string>
    <string name="measurement">Measurement</string>
    <string name="id">ID</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="time">Time</string>
    <string name="tps">Throttle Position</string>
    <string name="rpm">RPM</string>
    <string name="speed">Speed</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="fuel_consumption">Fuel Consumption</string>
    <string name="intake_pressure">Intake Pressure</string>
    <string name="intake_temperature">Intake Temperature</string>
    <string name="sttb1">Short Term Trim Bank 1</string>
    <string name="lttb1">Long Term Trim Bank 1</string>
    <string name="maf">MAF</string>
    <string name="engine_load">Engine Load</string>
    <string name="car">Car</string>
    <string name="currentCO2">Co2 Emissions</string>
    <string name="drivingStyleRating">Driving Style Rating</string>
    <string name="moneySpent">Money spent for this trip</string>
    <string name="title_activity_map">Driven Route</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">Name</string>
    <string name="messages">Nachrichten</string>
    <string name="performance">Leistung</string>
    <string name="auto">Auto</string>
    <string name="car2">"Car: "</string>
    <string name="duration">"Duration: "</string>
    <string name="begin">"Begin: "</string>
    <string name="end">"End: "</string>
    <string name="length">"Length: "</string>
    <string name="Co2emission">"CO\u2082 emission: "</string>
    <string name="consumption">"Consumption: "</string>
    <string name="fuel_cost">"Estimated fuel cost: "</string>
    <string name="calculating">"calculating&#8230;"</string>
    <string name="loading">"loading&#8230;"</string>
    <string name="error_calculating_fuel_costs">"Error during calculation."</string>
    <string name="title_activity_settings">Settings</string>
    <string name="currentSpeed">Speed</string>
    <string name="currentPosition">Position</string>
    <string name="positioning_Info">The positioning is based on GPS, to have a precised positions for the measurement. Please wait until you get GPS coordinates.</string>
    <string name="no_current_position">none</string>
    <string name="menu_start">Start</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_starting">Starting</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_upload">Upload</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_login">Sign in/Register</string>
    <string name="track_mode_single">Single Track</string>
    <string name="track_mode_auto">Automatic Track Creation (experimental)</string>
    <string name="question_track_mode">Do you want to record a single track or start automatic creation?</string>
    <string name="device_discovery_next_try">Device Discovery - %1$s:%2$s minutes until next try</string>
    <string name="device_discovery_pending">Device Discovery - Pending&#8230;</string>
    <string name="track_finished">Track Finished: </string>
    <string name="track_finishing_failed">Finishing the Track failed</string>
    <string name="track_finished_no_measurements">The created track did not contain any measurements</string>
    <string name="finish_track">Finish Track?</string>
    <string name="finish_track_long">Do you really want to finish this track?</string>
    <string name="stop_automatic_mode">Stop Automatic Track Creation?</string>
    <string name="stop_automatic_mode_long">Do you want to stop the Automatic Track Creation? This
        will finish the current track as well.</string>
    <string name="gasoline">Gasoline</string>
    <string name="diesel">Diesel</string>
    <string name="register_car">Register Car</string>
    <string name="register_car_progress">Register Car Progress</string>
    <string name="register_car_success">successfully registered.</string>
    <string name="prompt_car_model">Car model</string>
    <string name="prompt_car_manufacturer">Car manufacturer</string>
    <string name="prompt_car_constructionYear">Construction year</string>
    <string name="prompt_car_engineDisplacement">Engine displacement (cc)</string>
    <string name="logged_in_as">Signed in as %1$s</string>
    <string name="editName">Edit Name</string>
    <string name="deleteTrack">Delete Track</string>
    <string name="uploadTrack">Upload Track as Open Data</string>
	<string name="dashboard_sensor_title">Car:</string>
	<string name="retry">Retry</string>
	<string name="description">Description:</string>
	<string name="editDescription">Edit Description</string>
	<string name="editTrack">Edit Track</string>
	<string name="enterTrackName">Enter trackname</string>
	<string name="enterTrackDescription">Enter track description</string>
	<string name="nameChanged">Name changed</string>
	<string name="descriptionChanged">Description changed</string>
	<string name="trackDeleted">Track deleted</string>
	<string name="remoteTrackDeleted">Remote track deleted</string>
	<string name="no">No</string>
	<string name="yes">Yes</string>
	<string name="deleteRemoteTrackQuestion">Do you really want to delete this remote track?</string>
	<string name="upload_notification">Attempting to upload local tracks.</string>
	<string name="upload_notification_success">Successfully uploaded local tracks.</string>
	<string name="no_sensor_selected">No Car selected</string>
	<string name="no_device_selected">No OBD-Adapter selected</string>
	<string name="title_create_new_sensor">New car profile</string>
	<string name="startMap">View in map</string>
	<string name="title_select_sensor">Select car</string>
	<string name="please_select">&#8230;</string>
	<string name="trackContainsNoCoordinates">Track contains no coordinates.</string>
	<string name="noSdCard">"Map cannot be shown without SD card."</string>
	<string name="hint_login_first">Please login first</string>
	<string name="not_yet_supported">not yet supported</string>
	<string name="default_track_description">Track with Car %s.</string>
	<string name="creating_temp_car">Creating temporary car.</string>
	<string name="imperial_unit_summary">Use imperial units (miles) for displaying values</string>
	<string name="open_drawer">Open</string>
	<string name="close_drawer">Close</string>
	<string name="menu_logout">Sign out</string>
	<string name="menu_register">Register</string>
	<string name="dashboard">Dashboard</string>
	<string name="my_tracks">My Tracks</string>
	<string name="select_car">Car</string>
	<string name="welcome_message">Welcome, </string>
	<string name="no_tracks">You have no tracks</string>
	<string name="fetching_tracks">fetching your tracks&#8230;</string>
	<string name="fetching_tracks_local">fetching local tracks&#8230;</string>
	<string name="fetching_tracks_remote">fetching remote tracks&#8230;</string>
	<string name="start_connection">Start device connection</string>
	<string name="stop_connection">Stop device connection</string>
	<string name="start_measuring">Start measuring</string>
	<string name="stop_measuring">Stopped measuring</string>
	<string name="bye_bye">Bye Bye!</string>
	<string name="all_local_tracks_deleted">All local tracks deleted.</string>
	<string name="not_possible_for_remote">Not yet possible for remote tracks.</string>
	<string name="envirocar.org">http://www.envirocar.org</string>
	<string name="imperial_unit">Use Imperial units</string>
	<string name="privacy">Obfuscate positions</string>
	<string name="shareTrack">Export</string>
	<string name="error_json">Internal Error creating your JSON string</string>
	<string name="error_io">File system error</string>
	<string name="help">Help</string>
<string name="help_head_1">1. About enviroCar</string>
    <string name="help_text_1">This app is part of the Citizen Science platform enviroCar (<a href="www.enviroCar.org">www.enviroCar.org</a>). You can use it to collect and analyze test drives, as well as provide the measured data as Open Data.</string>
    <string name="help_head_2">2. Getting Started</string>
    <string name="help_text_2">The initial screen displays the current measured values of speed, CO2 emission and geographic location (position). In addition, it shows the type of car you have specified.
\n\n
Before you can start recording your track data, you must complete the following steps.
\n\n
Click on the main menu  (icon top left) to access the functions needed to do this.</string>
	<string name="help_head_2_1">2.1 Register</string>
	<string name="help_text_2_1">If you have not yet registered as an enviroCar user, you can do so with the function “create user account”.</string>
	<string name="help_head_2_2">2.2 Enter car data</string>
	<string name="help_text_2_2">Various information about the car is required in order to calculate certain parameters based on the automotive sensor data. Choose either an existing car profile for create a new car profile. You must be signed in in order to create a new profile.</string>
	<string name="help_head_2_3">2.3 Connect to car</string>
	<string name="help_text_2_3">Plug the OBD-II adapter into the ODB-II port in your car. The port is usually found in the footwell on the driver’s side, sometimes under a cover in the dashboard or in the console. Follow the Bluetooth adapter instructions for connecting your smartphone and the adapter.
\n\n
Under Settings, select -> ODB SETTINGS -> choose the ODB adapter you have connected to your car.</string>
    <string name="help_head_3">3. Record track</string>
	<string name="action_send_log">Send</string>
	<string name="send_log_0">This feature helps us to reproduce unexpected behavior or program crashes.
	    When sending in the Log file of the enviroCar app you help to improve it.</string>
	<string name="send_log_1">This feature uses the default \"Send To\" mechanism.
	    If you invoke it with your Email client, you can easily send the report via email. If you do not have an Email client installed,
	    you can save the log file on a PC, e.g. through Bluetooth or USB. In such cases we appreciate sending
	    in the reporting bundle manually. It is stored at the following location:</string>
	<string name="send_log_when_label">Approximate minutes past since issue:</string>
	<string name="send_log_comments_label">(additional comments)</string>
	<string name="send_log_time_past_hint">(time past since issue)</string>
	<string name="menu_logbook">Logbook</string>
</resources>