<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LoginFormContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title_create_new_sensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/title_create_new_sensor"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_border" >

        <LinearLayout
            android:id="@+id/car_register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/addCarToGarage_car_manufacturer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_car_manufacturer"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/addCarToGarage_car_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_car_model"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/addCarToGarage_car_constructionYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_car_constructionYear"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/addCarToGarage_car_engineDisplacement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_car_engineDisplacement"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />

            <RadioGroup
                android:id="@+id/radiogroup_fueltype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio_gasoline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/gasoline" />

                <RadioButton
                    android:id="@+id/radio_diesel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/diesel" />
            </RadioGroup>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/car_register_progress"
            style="@android:style/Widget.ProgressBar.Large"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerInParent="true"
            android:indeterminateOnly="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/car_register_status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:visibility="gone" />
    </RelativeLayout>

    <Button
        android:id="@+id/register_car_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="16dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/register_car" />

</LinearLayout>