<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mygaragelayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MyGarage" >

    <LinearLayout
        android:id="@+id/addCarToGarage_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/addCarToGarage_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/register_progress_signing_in"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- register car at server form -->

    <ScrollView
        android:id="@+id/garage_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            style="@style/LoginFormContainer"
            android:orientation="vertical" >
            
			<View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/blue_dark_cario"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center_horizontal"
                android:text="@string/title_select_sensor" />

            <ProgressBar
                android:id="@+id/sensor_dl_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="gone" />

            <Button
                android:id="@+id/retrybutton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/retry"
                android:visibility="gone" />

            <Spinner
                android:id="@+id/dashboard_current_sensor_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:prompt="@string/please_select" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/blue_dark_cario"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center_horizontal"
                android:text="@string/title_create_new_sensor"
                android:id="@+id/title_create_new_sensor" />


            <EditText
                android:id="@+id/addCarToGarage_car_manufacturer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_car_manufacturer"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/addCarToGarage_car_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_car_model"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/addCarToGarage_car_constructionYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_car_constructionYear"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true" />

            <RadioGroup
                android:id="@+id/radiogroup_fueltype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center" >

                <RadioButton
                    android:id="@+id/radio_gasoline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/gasoline" />

                <RadioButton
                    android:id="@+id/radio_diesel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/diesel" />
            </RadioGroup>

            <Button
                android:id="@+id/register_car_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/register_car" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>