<!--

    Copyright (C) 2013 - 2015 the enviroCar community

    This file is part of the enviroCar app.

    The enviroCar app is free software: you can redistribute it and/or
    modify it under the terms of the GNU General Public License as published
    by the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    The enviroCar app is distributed in the hope that it will be useful, but
    WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
    Public License for more details.

    You should have received a copy of the GNU General Public License along
    with the enviroCar app. If not, see http://www.gnu.org/licenses/.

-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SendLogFileActivity" >

    <ScrollView
        android:id="@+id/send_log_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

       <LinearLayout
            style="@style/LoginFormContainer"
            android:orientation="vertical" >
	            
	        <TextView
	            android:id="@+id/textView_send_log_0"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingBottom="5dp"
	            android:text="@string/send_log_0" />
	        
	        <TextView
	            android:id="@+id/textView_send_log_1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingBottom="5dp"
	            android:text="@string/send_log_1" />

	        <TextView
	            android:id="@+id/textView_send_log_location"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:typeface="monospace"
	            android:paddingBottom="5dp"
	            tools:ignore="SelectableText" />

	        <TextView
	            android:id="@+id/textView_send_log_when_label"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/send_log_when_label" />

            <EditText
                android:id="@+id/send_log_when"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1"
                android:hint="@string/send_log_time_past_hint"
                android:paddingBottom="15dp"
                android:singleLine="true" />
            
            <EditText
                android:id="@+id/send_log_comments"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:hint="@string/send_log_comments_label"
                android:maxLines="10" />
            
            <Button
                android:id="@+id/send_log_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/action_send_log" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>