<?xml version="1.0" encoding="utf-8"?>
<!--

    Copyright (C) 2013 - 2015 the enviroCar community

    This file is part of the enviroCar app.

    The enviroCar app is free software: you can redistribute it and/or
    modify it under the terms of the GNU General Public License as published
    by the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    The enviroCar app is distributed in the hope that it will be useful, but
    WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
    Public License for more details.

    You should have received a copy of the GNU General Public License along
    with the enviroCar app. If not, see http://www.gnu.org/licenses/.

-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/LoginFormContainer"
    android:orientation="vertical">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center_horizontal"
                android:text="@string/title_select_sensor" />

            <ProgressBar
                android:id="@+id/sensor_dl_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="gone" />

            <Button
                android:id="@+id/retrybutton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/retry"
                android:visibility="gone" />

            <Spinner
                android:id="@+id/dashboard_current_sensor_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:prompt="@string/please_select" />

            <TableLayout
                android:background="@drawable/rounded_border"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:id="@+id/selected_car_details"
                android:visibility="visible"
                >

               <TableRow>
                   <TextView android:text="@string/prompt_car_manufacturer"
                       android:gravity="right"
                       android:layout_weight="0.5"
                       android:textAppearance="@android:style/TextAppearance.Small"
                       android:layout_margin="5dp"/>
                   <TextView android:id="@+id/car_manufacturer_value"
                       android:layout_weight="0.5"
                       android:layout_gravity="center_vertical"
                       android:text="..."/>
               </TableRow>
               <TableRow>
                   <TextView android:text="@string/prompt_car_model"
                       android:gravity="right"
                       android:layout_weight="0.5"
                       android:textAppearance="@android:style/TextAppearance.Small"
                       android:layout_margin="5dp"/>
                   <TextView android:id="@+id/car_model_value"
                       android:layout_gravity="center_vertical"
                       android:layout_weight="0.5"/>
               </TableRow>
               <TableRow>
                   <TextView android:text="@string/prompt_car_constructionYear"
                       android:gravity="right"
                       android:layout_weight="0.5"
                       android:textAppearance="@android:style/TextAppearance.Small"
                       android:layout_margin="5dp"/>
                   <TextView android:id="@+id/car_constructionYear_value"
                       android:layout_gravity="center_vertical"
                       android:layout_weight="0.5"/>
               </TableRow>
               <TableRow>
                   <TextView android:text="@string/prompt_car_engineDisplacement"
                       android:gravity="right"
                       android:layout_weight="0.5"
                       android:textAppearance="@android:style/TextAppearance.Small"
                       android:layout_margin="5dp"/>
                   <TextView android:id="@+id/car_engineDisplacement_value"
                       android:layout_gravity="center_vertical"
                       android:layout_weight="0.5"/>
               </TableRow>
            </TableLayout>

		</LinearLayout>